--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 209 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 213 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -48,6 +48,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -80,31 +81,32 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4049 rev-parse
-   1787 symbolic-ref
+   4147 rev-parse
+   1836 symbolic-ref
     282 diff-index
     274 log
-    214 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    196 diff
-    138 --git-dir=.git
-    134 st
+    216 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    198 diff
+    142 --git-dir=.git
+    137 st
      99 checkout
-     74 lola
+     78 lola
      59 achievements
-     42 help
+     44 help
      37 config
-     34 commit
-     31 stash
-     30 add
-     26 lol
-     25 rebase
+     35 stash
+     35 commit
+     31 add
+     29 lol
+     28 rebase
+     26 difftool
      25 br
-     24 difftool
      14 merge
-     10 branch
+     11 branch
+     11 blame
       9 ls-remote
       8 gc
-      8 blame
+      6 show
       6 pull
       6 fetch
       6 bundle
@@ -113,7 +115,6 @@ Git commands sorted by usage:
       4 push
       4 describe
       4 clone
-      3 show
       3 --git-dir=
       2 whatchanged
       2 show-branch
@@ -128,6 +129,7 @@ Git commands sorted by usage:
       1 ls-files
       1 init
       1 --help
+      1 for-each-ref
 </pre>
 <script type="text/javascript">
 function showLocked() {
