--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 213 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 218 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
@@ -81,41 +82,43 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4147 rev-parse
-   1836 symbolic-ref
+   4517 rev-parse
+   2021 symbolic-ref
     282 diff-index
     274 log
-    216 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    198 diff
+    239 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    210 diff
+    155 st
     142 --git-dir=.git
-    137 st
-     99 checkout
-     78 lola
-     59 achievements
-     44 help
+    108 checkout
+     88 lola
+     60 achievements
+     51 help
+     45 stash
      37 config
-     35 stash
-     35 commit
-     31 add
-     29 lol
+     37 commit
+     34 add
+     31 lol
      28 rebase
+     27 br
      26 difftool
-     25 br
-     14 merge
-     11 branch
+     15 merge
+     12 branch
      11 blame
       9 ls-remote
-      8 gc
+      9 gc
+      7 fsck
+      7 bundle
       6 show
       6 pull
       6 fetch
-      6 bundle
       5 status
       4 tag
       4 push
       4 describe
       4 clone
       3 --git-dir=
+      3 for-each-ref
       2 whatchanged
       2 show-branch
       2 revert
@@ -129,7 +132,6 @@ Git commands sorted by usage:
       1 ls-files
       1 init
       1 --help
-      1 for-each-ref
 </pre>
 <script type="text/javascript">
 function showLocked() {
