--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 218 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 222 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -55,6 +55,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -82,39 +83,40 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4517 rev-parse
-   2021 symbolic-ref
+   4619 rev-parse
+   2072 symbolic-ref
     282 diff-index
     274 log
-    239 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    210 diff
+    262 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    211 diff
     155 st
     142 --git-dir=.git
-    108 checkout
-     88 lola
+    115 checkout
+     99 lola
      60 achievements
      51 help
      45 stash
+     38 commit
      37 config
-     37 commit
-     34 add
-     31 lol
+     35 add
+     32 lol
+     31 br
      28 rebase
-     27 br
      26 difftool
-     15 merge
+     18 merge
      12 branch
      11 blame
       9 ls-remote
       9 gc
+      8 push
       7 fsck
       7 bundle
       6 show
       6 pull
       6 fetch
+      5 tag
       5 status
-      4 tag
-      4 push
+      5 reset
       4 describe
       4 clone
       3 --git-dir=
@@ -122,7 +124,6 @@ Git commands sorted by usage:
       2 whatchanged
       2 show-branch
       2 revert
-      2 reset
       2 format-patch
       2 clean
       2 bisect
