--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 222 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 227 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -76,6 +76,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
@@ -83,40 +84,40 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4619 rev-parse
-   2072 symbolic-ref
+   5375 rev-parse
+   2450 symbolic-ref
+    346 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     282 diff-index
     274 log
-    262 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    211 diff
-    155 st
+    219 diff
+    170 st
     142 --git-dir=.git
-    115 checkout
-     99 lola
+    142 checkout
+    135 lola
      60 achievements
-     51 help
-     45 stash
-     38 commit
+     56 help
+     52 stash
+     43 commit
+     40 add
+     39 br
      37 config
-     35 add
-     32 lol
-     31 br
+     35 lol
+     33 difftool
      28 rebase
-     26 difftool
-     18 merge
-     12 branch
+     24 merge
+     16 push
+     16 branch
      11 blame
+     10 gc
+      9 tag
       9 ls-remote
-      9 gc
-      8 push
+      9 bundle
       7 fsck
-      7 bundle
+      6 status
       6 show
+      6 reset
       6 pull
       6 fetch
-      5 tag
-      5 status
-      5 reset
       4 describe
       4 clone
       3 --git-dir=
