--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 237 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 242 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -65,6 +65,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Gipsy (Level 4)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -86,35 +87,35 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6031 rev-parse
-   2782 symbolic-ref
-    414 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   6401 rev-parse
+   2967 symbolic-ref
+    440 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     282 diff-index
     274 log
-    240 diff
-    179 st
-    172 checkout
-    157 lola
+    248 diff
+    193 st
+    180 checkout
+    169 lola
     142 --git-dir=.git
-     76 stash
+     84 stash
+     63 br
+     62 help
      60 achievements
-     59 help
-     57 br
-     45 commit
-     42 add
-     40 lol
-     37 difftool
+     48 commit
+     46 lol
+     45 add
+     39 difftool
      37 config
      28 rebase
-     24 merge
-     17 push
-     16 branch
-     13 show
+     26 merge
+     20 push
+     17 branch
+     16 show
      11 blame
+     10 tag
      10 gc
-      9 tag
+     10 bundle
       9 ls-remote
-      9 bundle
       7 fsck
       6 status
       6 reset
@@ -122,6 +123,7 @@ Git commands sorted by usage:
       6 fetch
       4 describe
       4 clone
+      3 reflog
       3 --git-dir=
       3 for-each-ref
       2 whatchanged
@@ -132,7 +134,6 @@ Git commands sorted by usage:
       2 bisect
       2 am
       1 remote
-      1 reflog
       1 ls-files
       1 init
       1 --help
