--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 252 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 257 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -67,6 +67,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Gipsy (Level 4)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
@@ -89,16 +90,16 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6723 rev-parse
-   3128 symbolic-ref
+   6753 rev-parse
+   3143 symbolic-ref
     459 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     282 diff-index
     274 log
     253 diff
     201 st
-    189 checkout
-    177 lola
-    153 --git-dir=.git
+    191 checkout
+    181 lola
+    159 --git-dir=.git
      84 stash
      67 help
      66 br
@@ -109,14 +110,14 @@ Git commands sorted by usage:
      41 difftool
      37 config
      33 rebase
-     30 merge
-     23 push
+     31 merge
+     24 push
      19 branch
      16 show
+     14 fetch
      13 tag
-     13 fetch
+     13 remote
      12 ls-remote
-     11 remote
      11 blame
      10 gc
      10 bundle
