--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 267 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 273 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -92,44 +93,44 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   7617 rev-parse
-   3570 symbolic-ref
-    541 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   7851 rev-parse
+   3620 symbolic-ref
+    562 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    285 diff
     282 diff-index
-    280 diff
     274 log
-    231 st
-    209 checkout
-    198 lola
+    249 st
+    217 checkout
+    209 lola
     175 --git-dir=.git
      94 stash
-     75 br
-     72 help
+     76 br
+     73 help
      65 lol
+     65 add
+     62 commit
      60 achievements
-     59 add
-     57 commit
      50 difftool
      40 config
-     35 rebase
-     33 merge
-     31 branch
-     28 push
-     18 show
+     38 rebase
+     35 merge
+     32 push
+     32 branch
+     21 show
+     17 tag
      17 fetch
-     15 tag
      14 remote
      12 ls-remote
      11 blame
      10 gc
      10 bundle
+      7 reset
       7 fsck
       6 status
-      6 reset
+      6 reflog
       6 pull
       5 format-patch
       5 clone
-      4 reflog
       4 describe
       3 --git-dir=
       3 for-each-ref
